chore: basic openapi
