# facilethings-openapi/src/apis/default_api.rs
@@ -15,21 +15,29 @@ use crate::apis::ResponseContent;
 use super::{Error, configuration};
 
 
-/// struct for typed errors of method [`_stuff_get_list`]
+/// struct for typed errors of method [`get_stuff_list`]
 #[derive(Debug, Clone, Serialize, Deserialize)]
 #[serde(untagged)]
-pub enum StuffGetListError {
+pub enum GetStuffListError {
+    UnknownValue(serde_json::Value),
+}
+
+/// struct for typed errors of method [`oauth_token`]
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum OauthTokenError {
+    DefaultResponse(crate::models::OAuthFlowPasswordResponseBody),
     UnknownValue(serde_json::Value),
 }
 
 
 /// 
-pub async fn _stuff_get_list(configuration: &configuration::Configuration, list: &str, page: Option<&str>, tags: Option<&str>, person: Option<&str>, area: Option<&str>, goal: Option<&str>, focus: Option<&str>, time: Option<&str>, energy: Option<&str>, urgent: Option<&str>) -> Result<crate::models::StuffResponse, Error<StuffGetListError>> {
+pub async fn get_stuff_list(configuration: &configuration::Configuration, list: &str, page: Option<&str>, tags: Option<&str>, person: Option<&str>, area: Option<&str>, goal: Option<&str>, focus: Option<&str>, time: Option<&str>, energy: Option<&str>, urgent: Option<&str>) -> Result<Vec<crate::models::StuffWrapper>, Error<GetStuffListError>> {
     let local_var_configuration = configuration;
 
     let local_var_client = &local_var_configuration.client;
 
-    let local_var_uri_str = format!("{}/stuff/get_list", local_var_configuration.base_path);
+    let local_var_uri_str = format!("{}/v1/stuff/get_list", local_var_configuration.base_path);
     let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
 
     local_var_req_builder = local_var_req_builder.query(&[("list", &list.to_string())]);
@@ -73,7 +81,36 @@ pub async fn _stuff_get_list(configuration: &configuration::Configuration, list:
     if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
         serde_json::from_str(&local_var_content).map_err(Error::from)
     } else {
-        let local_var_entity: Option<StuffGetListError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_entity: Option<GetStuffListError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
+
+/// 
+pub async fn oauth_token(configuration: &configuration::Configuration, o_auth_flow_password_request_body: crate::models::OAuthFlowPasswordRequestBody) -> Result<crate::models::OAuthFlowPasswordResponseBody, Error<OauthTokenError>> {
+    let local_var_configuration = configuration;
+
+    let local_var_client = &local_var_configuration.client;
+
+    let local_var_uri_str = format!("{}/oauth/token", local_var_configuration.base_path);
+    let mut local_var_req_builder = local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
+        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+    local_var_req_builder = local_var_req_builder.json(&o_auth_flow_password_request_body);
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        serde_json::from_str(&local_var_content).map_err(Error::from)
+    } else {
+        let local_var_entity: Option<OauthTokenError> = serde_json::from_str(&local_var_content).ok();
         let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
         Err(Error::ResponseError(local_var_error))
     }
