# facilethings-openapi/src/models/o_auth_flow_password_request_body.rs
@@ -1,0 +1,40 @@
+/*
+ * FacileThings API
+ *
+ * This is the OpenAPI for `app.facilethings.com`.
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: im@strrl.dev
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct OAuthFlowPasswordRequestBody {
+    #[serde(rename = "grant_type")]
+    pub grant_type: String,
+    #[serde(rename = "client_id")]
+    pub client_id: String,
+    #[serde(rename = "client_secret")]
+    pub client_secret: String,
+    #[serde(rename = "username")]
+    pub username: String,
+    #[serde(rename = "password")]
+    pub password: String,
+}
+
+impl OAuthFlowPasswordRequestBody {
+    pub fn new(grant_type: String, client_id: String, client_secret: String, username: String, password: String) -> OAuthFlowPasswordRequestBody {
+        OAuthFlowPasswordRequestBody {
+            grant_type,
+            client_id,
+            client_secret,
+            username,
+            password,
+        }
+    }
+}
+
+
