# facilethings-openapi/src/models/stuff_response_stuff.rs
@@ -1,70 +1,0 @@
-/*
- * FacileThings API
- *
- * This is the OpenAPI for `app.facilethings.com`.
- *
- * The version of the OpenAPI document: 0.0.1
- * Contact: im@strrl.dev
- * Generated by: https://openapi-generator.tech
- */
-
-
-
-
-#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
-pub struct StuffResponseStuff {
-    #[serde(rename = "id", skip_serializing_if = "Option::is_none")]
-    pub id: Option<i32>,
-    #[serde(rename = "text", skip_serializing_if = "Option::is_none")]
-    pub text: Option<String>,
-    #[serde(rename = "created_at", skip_serializing_if = "Option::is_none")]
-    pub created_at: Option<String>,
-    #[serde(rename = "reminder", skip_serializing_if = "Option::is_none")]
-    pub reminder: Option<String>,
-    #[serde(rename = "time", skip_serializing_if = "Option::is_none")]
-    pub time: Option<String>,
-    #[serde(rename = "energy", skip_serializing_if = "Option::is_none")]
-    pub energy: Option<String>,
-    #[serde(rename = "priority", skip_serializing_if = "Option::is_none")]
-    pub priority: Option<i32>,
-    #[serde(rename = "important", skip_serializing_if = "Option::is_none")]
-    pub important: Option<i32>,
-    #[serde(rename = "goal_id", skip_serializing_if = "Option::is_none")]
-    pub goal_id: Option<String>,
-    #[serde(rename = "area_id", skip_serializing_if = "Option::is_none")]
-    pub area_id: Option<i32>,
-    #[serde(rename = "checkpoints_count", skip_serializing_if = "Option::is_none")]
-    pub checkpoints_count: Option<i32>,
-    #[serde(rename = "checkpoints_done", skip_serializing_if = "Option::is_none")]
-    pub checkpoints_done: Option<i32>,
-    #[serde(rename = "writings_count", skip_serializing_if = "Option::is_none")]
-    pub writings_count: Option<i32>,
-    #[serde(rename = "project", skip_serializing_if = "Option::is_none")]
-    pub project: Option<Box<crate::models::StuffResponseStuffProject>>,
-    #[serde(rename = "tags", skip_serializing_if = "Option::is_none")]
-    pub tags: Option<Vec<serde_json::Value>>,
-}
-
-impl StuffResponseStuff {
-    pub fn new() -> StuffResponseStuff {
-        StuffResponseStuff {
-            id: None,
-            text: None,
-            created_at: None,
-            reminder: None,
-            time: None,
-            energy: None,
-            priority: None,
-            important: None,
-            goal_id: None,
-            area_id: None,
-            checkpoints_count: None,
-            checkpoints_done: None,
-            writings_count: None,
-            project: None,
-            tags: None,
-        }
-    }
-}
-
-
